--- a/html/login.html
+++ b/html/login.html
@@ -9,59 +9,62 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
 </head>
 
 <body>
-    <div class="register ">
-        <div class="register-card animate__animated animate__bounce">
+    <div class="register">
+        <button class="mode-toggle"><i class="fa-solid fa-sun"></i></button>
+        <button class="lang-toggle"><i class="fa-solid fa-language light-lang"></i></button>
+        <div class="register-card">
             <div class="left-part">
-                <h1>Todo App</h1>
-                <p>Login using your social media account</p>
+                <h1  class="animate__animated animate__lightSpeedInLeft">Todo App</h1>
+                <p class="parg animate__animated animate__lightSpeedInLeft">Login using your social media account</p>
                 <ul>
-                    <li>
-                        <a href="#">
-                            <i class="fab fa-facebook-f icon"></i> </a>
-                        Facebook
+                    <li class="animate__animated animate__lightSpeedInLeft">
+                        <a href="#"><i class="fab fa-facebook-f icon"></i></a>
+                        <p class="parg">Facebook</p>
                     </li>
-                    <li>
+                    <li class="animate__animated animate__lightSpeedInLeft">
                         <a href="#"><i class="fab fa-twitter icon"></i></a>
-                        Twitter
+                        <p class="parg">Twitter</p>
                     </li>
-                    <li>
+                    <li class="animate__animated animate__lightSpeedInLeft">
                         <a href="#"><i class="fab fa-linkedin-in icon"></i></a>
-                        Linkedin
+                        <p class="parg">Linkedin</p>
                     </li>
-                    <li>
+                    <li class="animate__animated animate__lightSpeedInLeft">
                         <a href="#"><i class="fab fa-google-plus-g icon"></i></a>
-                        Google Plus
+                        <p class="parg">Google Plus</p>
                     </li>
                 </ul>
 
             </div>
             <div class="right-part">
-                <h1>Login To Your Account</h1>
-                <p>Dont you have account? <a href="../html/register.html">Sign Up Free!</a></p>
-                <input type="text" placeholder="Email address">
-                <input type="password" placeholder="Password" name="" id="">
+                <h1 class="animate__animated animate__lightSpeedInLeft">Login To Your Account</h1>
+                <div class="forgey">
+                    <p class="parg animate__animated animate__lightSpeedInLeft">Dont you have account?</p>
+                    <a href="../html/register.html" class="page">Sign Up Free!</a>
+                </div>
+
+                <input type="text" placeholder="Email address" class="user-name">
+                <input type="password" placeholder="Password" name="" class="user-pass">
                 <div class="bottom-part">
                     <div>
                         <input type="checkbox" name="" id="">
-                        Remember Me
+                        <p class="parg animate__animated animate__lightSpeedInLeft">Remember Me</p>
                     </div>
-                    <a href="">Forgot Password?</a>
+                    <a href="" class="page">Forgot Password?</a>
                 </div>
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="./todo.html">Login With Email
-                                <span></span><span></span><span></span><span></span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
+                <button class="login animate__animated animate__tada animate__slow animate__infinite">
+                    <a href="./todo.html" class="link page">Login With Email
+                    </a>
+                </button>
             </div>
         </div>
     </div>
+
+    <script src="../script/login.js"></script>
 </body>
 
 </html>
