--- a/html/todo.html
+++ b/html/todo.html
@@ -20,13 +20,16 @@
             <div class="left-part">
                 <div class="user-part">
                     <div>
-                        <img src="./icons8-user-30.png" alt="">
-                        <p class="parg">UserName:</p>
+                        <div>
+                            <img src="./icons8-user-30.png" alt="">
+                            <p class="parg">UserName:</p>
+                        </div>
+                        <p class="nam"></p>
                     </div>
                     <!-- <div>
                         <p class="ad"></p>
                     </div> -->
- 
+
                 </div>
                 <div class="section">
                     <div>
