--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
                 <h1 class="animate__animated animate__lightSpeedInLeft">Login To Your Account</h1>
                 <div class="forgey">
                     <p class="parg animate__animated animate__lightSpeedInLeft">Dont you have account?</p>
-                    <a href="../html/register.html" class="page">Sign Up Free!</a>
+                    <a href="./register.html" class="page">Sign Up Free!</a>
                 </div>
 
                 <input type="text" placeholder="Email address" class="user-name">
